--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="row mt-4">
   <div class="col-3">
-    Side Bar
+    <shared-sidebar></shared-sidebar>
   </div>
   <div class="col">
-    Router
+    <router-outlet></router-outlet>
   </div>
 </div>
