Creando nuevo app-routing

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -8,4 +8,7 @@
   <li routerLink="about" class="list-group-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     About
   </li>
+  <li routerLink="contact" class="list-group-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+    Contact
+  </li>
 </ul>
