Agregando ruta peresosa

--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -1,1 +1,13 @@
-<p>by-capital-page works!</p>
+<hr>
+<div class="row">
+    <div class="col">
+        <shared-search-box placeHolder="este es un place holder"></shared-search-box>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col">
+        <hr>
+        Tabla de resultados
+    </div>
+</div>
