--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
 <hr>
 
 <ul class="list-group">
-  <li routerLink="" class="list-group-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+  <!-- <li routerLink="" class="list-group-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     Home page
   </li>
   <li routerLink="about" class="list-group-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
@@ -10,5 +10,14 @@
   </li>
   <li routerLink="contact" class="list-group-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     Contact
+  </li> -->
+  <li routerLink="countries/by-capital" class="list-group-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+    Por Capital
+  </li>
+  <li routerLink="countries/by-country" class="list-group-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+    Por País
+  </li>
+  <li routerLink="countries/by-region" class="list-group-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+    Por Region
   </li>
 </ul>
