--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,1 +1,14 @@
-<p>by-region-page works!</p>
+<h2>Por región</h2>
+<hr>
+<div class="row">
+    <div class="col">
+        <shared-search-box (onValue)="searchByRegion($event)" placeHolder="Buscar por región"></shared-search-box>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col">
+        <hr>
+        <countries-table [countries]="countries"></countries-table>
+    </div>
+</div>
