Agregando spinner loading, conociendo el debouncer Observable

--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -2,13 +2,14 @@
 <hr>
 <div class="row">
     <div class="col">
-        <shared-search-box (onValue)="searchByCapital($event)" placeHolder="Buscar por capital"></shared-search-box>
+        <shared-search-box (onDebounce)="searchByCapital($event)" placeHolder="Buscar por capital"></shared-search-box>
     </div>
 </div>
 
 <div class="row">
     <div class="col">
         <hr>
+        <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
         <countries-table [countries]="countries"></countries-table>
     </div>
 </div>
