--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,11 +1,13 @@
 <h2>Por región</h2>
 <hr>
 <div class="row">
-    <div class="col">
-        <shared-search-box (onValue)="searchByRegion($event)" placeHolder="Buscar por región"></shared-search-box>
+    <div class="col text-center">
+        <button *ngFor="let region of regions" class="btn mx-2" (click)="searchByRegion(region)"
+        [ngClass]="{'btn-outline-primary': selectedRegion === region}">
+            {{region}}
+        </button>
     </div>
 </div>
-
 <div class="row">
     <div class="col">
         <hr>
