Se termina la sección, información valiosa como los debounce, persistir datos en localstorage, cominicación entre componentes, tipado de consumo de servicios

--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -2,7 +2,7 @@
 <hr>
 <div class="row">
     <div class="col">
-        <shared-search-box (onDebounce)="searchByCapital($event)" placeHolder="Buscar por capital"></shared-search-box>
+        <shared-search-box (onDebounce)="searchByCapital($event)" [initialValue]="initialValue" placeHolder="Buscar por capital"></shared-search-box>
     </div>
 </div>
 
